tempfile/derive_more/tests/compile_fail/display/legacy_bound_syntax.rs
#[derive(derive_more::Display)]
#[display(bound = "String: std::fmt::Display")]
pub struct Foo {
    bar: String,
}

fn main() {}
